# RedButton

./: .dockerignore  .gitignore  API_NOTES.md  CLAUDE.md  LEADERBOARD.md  PROJECT.md  PROJECT_SUMMARY.md  README.md  openenv.yaml  pyproject.toml
.claude/: README.md
.claude/notes/: decisions.md  deviations.md
evaluation/: baseline_rollout.py  concurrent_load_test.py  find_hero_seed.py  seeds.txt
results/: baseline_qwen3_4b_train_op.csv  headline_with_ci.csv  post_sft_recovery_qwen3_4b_train_op.csv  schema.md
scripts/: install_hooks.sh  launch_eval_via_api.py  launch_grpo_phase7b.sh  launch_grpo_via_api.py
server/: Dockerfile  app.py  shutdown_environment.py
shutdown_gym/: __init__.py  audit.py  client.py  models.py  operator.py  problems.py  restricted_python.py  rubrics.py  scripted_worker.py  tiers.py  timer.py
shutdown_gym/data/: problems_pool.json
shutdown_gym/data/induction_transcripts/: t2_seed_1000_tamper_chmod.jsonl  t2_seed_1001_tamper_chmod.jsonl  t2_seed_1002_tamper_chmod.jsonl  t2_seed_1003_tamper_chmod.jsonl  t2_seed_1004_tamper_chmod.jsonl  t2_seed_1005_tamper_chmod.jsonl  t2_seed_1006_tamper_chmod.jsonl  t2_seed_1007_tamper_chmod.jsonl  t2_seed_1008_tamper_chmod.jsonl  t2_seed_1009_tamper_chmod.jsonl  t2_seed_1010_tamper_chmod.jsonl  t2_seed_1011_tamper_chmod.jsonl  t2_seed_1012_tamper_chmod.jsonl  t2_seed_1013_tamper_chmod.jsonl  t2_seed_1014_tamper_chmod.jsonl  t2_seed_1015_tamper_chmod.jsonl  t2_seed_1016_tamper_chmod.jsonl  t2_seed_1017_tamper_chmod.jsonl  t2_seed_1018_tamper_chmod.jsonl  t2_seed_1019_tamper_chmod.jsonl  t2_seed_1020_tamper_chmod.jsonl  t2_seed_1021_tamper_chmod.jsonl  t2_seed_1022_tamper_chmod.jsonl  t2_seed_1023_tamper_chmod.jsonl  t2_seed_1024_tamper_rewrite.jsonl  t2_seed_1025_tamper_rewrite.jsonl  t2_seed_1026_tamper_rewrite.jsonl  t2_seed_1027_tamper_rewrite.jsonl  t2_seed_1028_tamper_rewrite.jsonl  t2_seed_1029_tamper_rewrite.jsonl  t2_seed_1030_tamper_rewrite.jsonl  t2_seed_1031_tamper_rewrite.jsonl  t2_seed_1032_tamper_rewrite.jsonl  t2_seed_1033_tamper_rewrite.jsonl  t2_seed_1034_tamper_rewrite.jsonl  t2_seed_1035_tamper_rewrite.jsonl  t2_seed_1036_tamper_rewrite.jsonl  t2_seed_1037_tamper_rewrite.jsonl  t2_seed_1038_tamper_rewrite.jsonl  t2_seed_1039_tamper_rewrite.jsonl  (+110 more)
tests/: test_audit.py  test_client.py  test_client_integration.py  test_concurrency_burst.py  test_environment.py  test_grpo_callbacks.py  test_grpo_rollout.py  test_induction_transcripts.py  test_operator.py  test_problems.py  test_restricted_python.py  test_rubrics.py  test_sandbox.py  test_timer.py
training/: generate_transcripts.py  grpo_callbacks.py  policies.py  rollout_func.py  sft_induction.py  train_grpo.py
